assets/scss/_fuji-theme/_style.scss
::selection,
::-moz-selection {
  color: var(--color-bg);
  background-color: var(--color-primary);
}

body {
  background-color: var(--color-bg);
  color: var(--color-font);
  height: max-content;

  @include link-1();
}

.post-summary,
.post-meta {
  @include link-2();
}

.pag-current a,
.pag-current a:hover {
  color: var(--color-focus);
}

.title-sub,
.post-meta {
  color: var(--color-mute);

  a {
    color: inherit;
  }
}

.page-info {
  border-bottom: $divider;
}

.post + .post,
.pagination,
footer {
  border-top: $divider;
}

.post-meta-archive {
  @include link-2();

  color: var(--color-mute);
}

@media screen and (max-width: $width-md) {
  .sidebar {
    border-top: $divider;
  }
}

// single page part
.post-content {
  @include link-2();
}

.markdown-body {
  a {
    color: var(--color-text-link);
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: var(--color-font);
        font-family: $bold-font;
  }

  h1,
  h2 {
    border-bottom: $divider;
  }

  blockquote {
    color: var(--color-mute);
  }

    b, strong {
      font-family: $bold-font;
    }

  img {
    border-radius: 2px;
    background-color: inherit; // fix white pixels under border-radius
  }

  hr {
    height: 2px;
  }

  pre,
  code {
    background-color: var(--color-codebg);
  }
}

.post-loading {
  border-top: $divider;
}

.post-comment {
  border-top: $divider;

  span.post-comment-notloaded {
    padding: 1.5rem 0;
    color: var(--color-text-link);
    cursor: pointer;

    &:hover {
      color: var(--color-focus);
    }
  }
}

// components
.btn {
  div {
    background-color: var(--color-divider);

    color: var(--color-font);
  }

  div:hover {
    background-color: var(--color-font);
    color: var(--color-divider);
  }

  div + div {
    border-top: 2px solid var(--color-bg);
  }
}

// disqus js styles

#dsqjs {
  a {
    text-decoration: none !important;
    color: var(--color-secondary) !important;
  }

  a:hover {
    color: var(--color-focus) !important;
  }

  .dsqjs-bullet::after {
    color: var(--color-mute) !important;
    font-weight: 600 !important;
  }

  .dsqjs-no-comment {
    color: var(--color-font) !important;
  }

  .dsqjs-nav-tab {
    color: var(--color-mute) !important;
  }

  .dsqjs-tab-active {
    color: var(--color-font) !important;

    & > span:after {
      background-color: var(--color-secondary) !important;
    }
  }

  .dsqjs-post-list {
    .dsqjs-post-avatar {
      background: var(--color-bg) !important;
    }

    .dsqjs-post-header {
      .dsqjs-post-author {
        color: var(--color-mute) !important;
        font-weight: 600;
      }

      .dsqjs-admin-badge {
        color: var(--color-font) !important;
        background: var(--color-codebg) !important;
      }

      .dsqjs-meta {
        color: var(--color-mute) !important;
      }
    }
  }

  .dsqjs-post-body {
    color: var(--color-font) !important;

    code,
    pre {
      background: var(--color-codebg) !important;
    }

    blockquote {
      color: var(--color-codebg) !important;
      border-left: 0.25em solid var(--color-divider) !important;
    }
  }

  .dsqjs-load-more {
    background: var(--color-mute) !important;
    color: var(--color-bg) !important;
  }

  footer {
    border-top: 2px solid var(--color-divider) !important;
    font-weight: 600 !important;
    color: var(--color-mute) !important;
  }

  .dsqjs-order-radio:checked + .dsqjs-order-label {
    color: var(--color-font) !important;
    background-color: var(--color-divider) !important;
  }

  .dsqjs-order-label {
    background-color: var(--color-bg) !important;
  }

  p.dsqjs-has-more a.dsqjs-has-more-btn {
    color: var(--color-mute) !important;
  }
}

.search-result-info {
  border-bottom: $divider;
}

.search-input {
  border-top: 2px solid;
  border-left: 2px solid;
  border-bottom: 2px solid;
  border-right: none;
  border-radius: 0.7rem;
  border-color: var(--color-divider);
  background-color: var(--color-bg);

  &:hover,
  &:focus-within {
    color: var(--color-primary);
    border-color: var(--color-primary);
  }

  input {
    outline: none;
    border: none;
    color: inherit;
    background-color: inherit;
  }

  button {
    outline: none;
    border-top: 2px solid;
    border-left: none;
    border-right: 2px solid;
    border-bottom: 2px solid;
    border-radius: 0 0.7rem 0.7rem 0;
    border-color: inherit;
    color: inherit;
    background-color: inherit;

    &:hover {
      color: var(--color-secondary);
    }
  }
}

